# TanabeSugano

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DIAGRAM_VIEWER_IMPLEMENTATION.md  Dockerfile  GITHUB_PAGES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SETUP.md  Tanabe_Sugano.ipynb  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  test_matrices.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-pages.yml  docker-image.yml  ponicode.yml  pypi-publish.yml  python-package.yml  python-poetry.yml  python-publish.yml
docs/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs-site/: README.md  generate-index.js  index.html  package-lock.json  package.json  vite.config.js
docs-site/public/ts-diagrams/d2/: DD-energies_d2_10Dq_40000_B_860_C_3801.csv  DD-energies_d2_10Dq_40000_B_860_C_3801.html
docs-site/public/ts-diagrams/d4/: TS-diagram_d4_10Dq_40000_B_965_C_4449.csv
docs-site/public/ts-diagrams/d5/: DD-energies_d5_10Dq_40000_B_860_C_3850.csv
docs-site/public/ts-diagrams/d7/: DD-energies_d7_10Dq_25065_B_971_C_4498.html  TS_Cut_d7_10Dq_24000_B_971_C_4498.csv
docs-site/public/ts-diagrams/d8/: TS-diagram_d8_10Dq_40000_B_1030_C_4850.csv  TS-diagram_d8_10Dq_40000_B_1030_C_4850.html
docs-site/src/: App.css  App.jsx  diagrams-index.json  index.css
docs-site/src/components/: DiagramViewer.tsx
docs-site/src/utils/: dataLoader.ts
docs/assets/: index-BZdb5jih.css  index-C1LMw6J3.css  index-CMG-DPp9.js  index-V4lsQZNM.js  index-ssDOLkB3.js
docs/src/: App.css  App.tsx  index.css
docs/src/components/: DiagramViewer.tsx
docs/ts-diagrams/: manifest.json
docs/ts-diagrams/d3/: DD-energies_d3_10Dq_40000_B_918_C_4132.csv  TS_Cut_d3_10Dq_24000_B_918_C_4132.csv
docs/ts-diagrams/d4/: DD-energies_d4_10Dq_40000_B_965_C_4449.csv
docs/ts-diagrams/d7/: TS-diagram_d7_10Dq_25065_B_971_C_4498.csv
examples/: DD-energies_d6_10Dq_25065_B_1080_C_4773.txt  TS-diagram_d6_10Dq_25065_B_1080_C_4773.txt  TS_Cut_d6_10Dq_24000_B_1080_C_4773.txt
src/: main.py  matrices.py
tanabe/: __init__.py  __main__.py  matrices.py
tanabesugano/: __init__.py  __main__.py  batch.py  cmd.py  constants.py  matrices.py  tools.py
tanabesugano/test/: __init__.py  test_batch.py  test_front.py  test_matrices.py  test_num.py
test/: __init__.py  test_front.py  test_num.py
test_matrices/: test_front.py  test_num.py
ts-diagrams/d2/: DD-energies_d2_10Dq_40000_B_860_C_3801.html  TS-diagram_d2_10Dq_40000_B_860_C_3801.csv  TS-diagram_d2_10Dq_40000_B_860_C_3801.html  TS_Cut_d2_10Dq_24000_B_860_C_3801.csv
ts-diagrams/d3/: TS-diagram_d3_10Dq_40000_B_918_C_4132.csv
ts-diagrams/d4/: TS_Cut_d4_10Dq_24000_B_965_C_4449.csv
ts-diagrams/d5/: TS-diagram_d5_10Dq_40000.0_B_860.0_C_3850.2200000000003.csv  TS_Cut_d5_10Dq_24000_B_860_C_3850.csv
ts-diagrams/d6/: DD-energies_d6_10Dq_40000_B_1065_C_5120.csv  TS-diagram_d6_10Dq_40000_B_1065_C_5120.csv  TS_Cut_d6_10Dq_24000_B_1065_C_5120.csv
ts-diagrams/d7/: DD-energies_d6_10Dq_40000_B_971_C_4498.csv  DD-energies_d7_10Dq_25065_B_971_C_4498.csv  TS-diagram_d6_10Dq_40000_B_971_C_4498.csv  TS-diagram_d7_10Dq_25065_B_971_C_4498.html  TS_Cut_d6_10Dq_24000_B_971_C_4498.csv
ts-diagrams/d8/: DD-energies_d8_10Dq_40000.0_B_1030.0_C_4850.2699999999995.html  DD-energies_d8_10Dq_40000_B_1030_C_4850.csv  DD-energies_d8_10Dq_40000_B_1030_C_4850.html  TS-diagram_d8_10Dq_40000.0_B_1030.0_C_4850.2699999999995.html  TS_Cut_d8_10Dq_24000_B_1030_C_4850.csv
