[tool.poetry]
name = "tanabesugano"
version = "1.4.3"
description = "A python-solver for Tanabe-Sugano and Energy-Correlation diagrams"
authors = ["Anselm Hahn <anselm.hahn@gmail.com>"]
maintainers = ["Anselm Hahn <anselm.hahn@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = [
        "terminal",
        "data-visualization",
        "tanabe-sugano",
        "energy-correlation",
        "complex-ions",
]
repository = "https://github.com/Anselmoo/TanabeSugano"
homepage = "https://pypi.org/project/TanabeSugano"
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS",
        "Operating System :: Unix",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: System :: Shells",
        "Topic :: Scientific/Engineering :: Visualization",
        "Topic :: Scientific/Engineering :: Chemistry",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Utilities",
]
include = ["LICENSE"]
exclude = ["test/**/*.py", "example/**", "ts-diagrams/**"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=1.2.4,<4.0.0"
numpy = [
        { version = "^1.24.4", python = ">=3.8,<3.9" },
        { version = "^1.26.4", python = ">=3.9,<3.10" },
        { version = "^2.0.2", python = ">=3.10,<3.13" },
]
matplotlib = "^3.4.2"
prettytable = ">=2.1,<4.0"
plotly = { version = "^5.13.1", optional = true }
update = "^0.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pytest-clarity = "^1.0.1"
pytest-cov = ">=4,<6"
flake8 = ">=6,<8"
black = ">=22.12,<26.0"
isort = "^5.11.4"
pytest-console-scripts = "^1.3.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tanabesugano = "tanabesugano.cmd:cmd_line"

[tool.poetry.extras]
plotly = ["plotly"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["UP006", "UP007", "N801", "N802", "N803", "N806"]
target-version = "py38"
src = ["tanabesugano"]

[tool.ruff.lint.per-file-ignores]
"tanabesugano/test/*" = ["PT006", "ANN001", "ANN201", "D103", "PLR2004", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["umf"]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-third-party = ["poetry.core"]
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
markers = """
    xfail: mark test as expecting to fail
    skip: mark test as skipped
"""
addopts = "-v --cov=tanabesugano"
