[project]
name = "tanabesugano"
version = "1.5.0"
description = "A python-solver for Tanabe-Sugano and Energy-Correlation diagrams"
authors = [
    {name = "Anselm Hahn", email = "anselm.hahn@gmail.com"}
]
maintainers = [
    {name = "Anselm Hahn", email = "anselm.hahn@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = [
        "terminal",
        "data-visualization",
        "tanabe-sugano",
        "energy-correlation",
        "complex-ions",
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: MacOS",
        "Operating System :: Unix",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: System :: Shells",
        "Topic :: Scientific/Engineering :: Visualization",
        "Topic :: Scientific/Engineering :: Chemistry",
        "Topic :: Scientific/Engineering :: Physics",
        "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.2.4,<4.0.0",
    "numpy>=2.0.2",
    "matplotlib>=3.4.2",
    "prettytable>=2.1,<4.0",
]

[project.optional-dependencies]
plotly = ["plotly>=5.13.1,<7.0.0"]

[project.scripts]
tanabesugano = "tanabesugano.cmd:cmd_line"

[project.urls]
Homepage = "https://pypi.org/project/TanabeSugano"
Repository = "https://github.com/Anselmoo/TanabeSugano"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tanabesugano"]

[tool.hatch.build.targets.sdist]
include = [
    "/tanabesugano",
    "/LICENSE",
    "/README.md",
]
exclude = [
    "/test",
    "/example",
    "/ts-diagrams",
]

[dependency-groups]
dev = [
    "pytest>=7.2,<9.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=4,<6",
    "flake8>=6,<8",
    "black>=22.12,<25.0",
    "isort>=5.11.4",
    "pytest-console-scripts>=1.3.1",
    "ruff>=0.7.0",
]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "UP006", "UP007",  # Deprecated typing imports handled by pyupgrade
    "N801", "N802", "N803", "N806",  # Naming conventions for legacy vars
    "D100", "D101", "D104",  # Missing module/class/package docstrings
    "D102", "D107",  # Missing method/init docstrings (legacy codebase)
    "FBT001", "FBT002",  # Boolean positional args (API design)
    "C901",  # Function complexity (intentional legacy design)
    "PLR2004",  # Magic values (many comparison constants)
    "PLR0913",  # Too many function arguments (API design)
    "A005",  # Module shadows builtin (cmd module name)
]
target-version = "py310"
src = ["tanabesugano"]

[tool.ruff.lint.per-file-ignores]
"tanabesugano/test/*" = ["PT006", "ANN001", "ANN201", "D103", "PLR2004", "S101"]

[tool.ruff.lint.isort]
known-first-party = ["umf"]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.pytest.ini_options]
markers = """
    xfail: mark test as expecting to fail
    skip: mark test as skipped
"""
addopts = "-v --cov=tanabesugano"
